--- a/projet-api-react/src/index.css
+++ b/projet-api-react/src/index.css
@@ -1,13 +1,57 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.page_wrapper {
+  font-family: Arial, Helvetica, sans-serif;
+  padding-left: 3%;
+  padding-right: 3%;
+  min-height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.nav {
+  height: 100px;
+  width: 100%;
+  background-color: black;
+}
+
+.hero {
+  padding: 72px;
+  background-image: url(/Users/quentinbrivet/API-/projet-api-react/public/img_background.png);
+  height: 70vh;
+  display: flex;
+  align-items: flex-end;
+}
+
+.card {
+  background-color: #fcfcfb;
+  display: inline-block;
+  margin: auto;
+  padding: 42px;
+}
+
+input {
+  width: 100%;
+}
+
+h1 {
+  max-width: 395px;
+  margin: auto;
+}
+
+button {
+  padding-top: 14px;
+  padding-bottom: 14px;
+  width: 100%;
+  background-color: #18aeba;
+  color: white;
+  border-radius: 100px;
+  stroke: 0px;
+  font-weight: bold;
+  font-size: 16px;
+  border: none;
+}
+
+text {
+  text-align: center;
+}
+
+.CTA {
+  margin-top: 18px;
 }
